# VARAG

./: .gitignore  404.html  README.md  ToDo.md  app1.py  colpali.py  corpus.ipynb  demo.py  index.html  main.py  mkdocs.yml  pyproject.toml  tdl_app.py  test.py  visionDemo.py
.github/workflows/: deploy-mkdocs.yml
archives/: README.md  ToDo.md  app1.py  tdl_app.py
colpaliRAG/: index.html
demo/: index.html
docs/: colpaliRAG.ipynb  demo.ipynb  hybridColpaliRAG.ipynb  index.md  simpleRAG.ipynb  visionRAG.ipynb
examples/: clip_embed.py  colpaliDemo.py  colpali_embed.py  colpali_simple.py  hybridColpaliDemo.py  hybrind_colpali_embed.py  jina_clip_embed.py  textDemo.py  text_embed.py  visionDemo.py
examples/base_implementation/: clip_embed.py  colpali_embed.py  hybrid_colpali_embed.py  hybrind_colpali_embed.py  jina_clip_embed.py  text_embed.py
examples/data/: colpali.md
hybridColpaliRAG/: index.html
search/: search_index.json
simpleRAG/: index.html
varag/: utils.py
varag/chunking/: __init__.py
varag/llms/: __init__.py  base.py
varag/llms/provider/: groq.py  litellm.py  openai.py
varag/rag/: __init__.py  _colpaliRAG.py  _hybridColpaiRAG.py  _hybridColpaliRAG.py  _simpleRAG.py  _textRAG.py  _visionRAG.py
varag/vlms/: __init__.py  base.py
varag/vlms/provider/: groq.py  mistral.py  openai.py
visionRAG/: index.html
