[tool.poetry]
name = "varag"
version = "0.1.0"
description = "Create Vision Driven RAG Systems at Scale"
authors = ["Adithya S K <adithyaskolavi@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "varag"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
lancedb = "^0.13.0"
fastapi = "^0.115.0"
gradio = "^4.44.0"
openai = "^1.48.0"
transformers = "^4.45.0"
python-dotenv = "^1.0.1"
colpali-engine = "^0.3.0"
pdf2image = "^1.17.0"
pypdf = "^5.0.0"
pymupdf = "^1.24.10"
timm = "^1.0.9"
einops = "^0.8.0"
sentence-transformers = "^3.1.1"
tiktoken = "^0.7.0"
chonkie = "^0.4.0"
ragas = "^0.2.9"
litellm = "^1.58.1"
docling = "^2.15.1"

[tool.poetry.extras]
ocr = ["docling"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"